--- a/resources/assets/css/common.css
+++ b/resources/assets/css/common.css
@@ -42,6 +42,7 @@ body {
     font-size: 16px;
     font-weight: 500;
     letter-spacing: -0.5px;
+    line-height: 1.5;
     margin: 0;
     position: relative;
 }
@@ -152,6 +153,13 @@ textarea {
 }
 
 /* **************************************** *
+ * Background-color
+ * **************************************** */
+.bg-gray {
+    background: #F4F5F7;
+}
+
+/* **************************************** *
  * Button
  * **************************************** */
 button {
@@ -181,6 +189,11 @@ button:focus {
 .btn-r {
     border: 0;
     border-radius: 100px;
+}
+
+.btn-mini {
+    height: 24px;
+    padding: 0 8px;
 }
 
 .btn-sm {
@@ -404,10 +417,220 @@ button:focus {
     padding: 24px 40px 32px 40px;
 }
 
+
+/* **************************************** *
+ * container
+ * **************************************** */
+.container {
+    margin: 0 auto;
+    min-width: 1440px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-2 {
+    width: calc((100%/12)*2);
+}
+
 /* **************************************** *
  * Header
  * **************************************** */
+.header {
+    position: relative;
+}
 
-/* **************************************** *
- * Footer
- * **************************************** */
+.header-top-wrap {
+    border-bottom: 1px solid #e8e8e8;
+}
+
+.header-top {
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    height: 48px;
+}
+
+.header-top ul {
+    align-items: center;
+    display: flex;
+}
+
+.header-top ul li {
+    align-items: center;
+    color: #999;
+    font-size: 14px;
+    font-weight: 500;
+    display: flex;
+}
+
+.header-top ul li::after {
+    background: #aaaaaa;
+    content: '';
+    display: inline-block;
+    height: 12px;
+    margin: 0 12px;
+    width: 1px;
+}
+
+.header-top ul li:last-child::after {
+    display: none;
+}
+
+.header-top ul li i {
+    margin: 0 4px 0 0;
+}
+
+.header-top ul li a {
+    color: #444;
+    font-weight: 600;
+    margin: 0 2px 0 0;
+    text-decoration: underline;
+}
+
+.header-top ul li span {
+    color: #444;
+    font-weight: 500;
+}
+
+.header-top button {
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.header-bottom-wrap {
+    border-bottom: 1px solid #004F9D;
+}
+
+.header-bottom {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+}
+
+.header-right {
+    align-items: center;
+    display: flex;
+    gap: 56px;
+}
+
+.header-navbar ul {
+    display: flex;
+    gap: 56px;
+}
+
+.header-navbar ul li a {
+    color: #000;
+    font-size: 20px;
+    font-weight: 500;
+    transition: .5s all;
+}
+
+.header-navbar ul li a:hover {
+    color: #004F9D;
+    transition: .5s all;
+}
+
+.header-menu {
+    background: none;
+    border: 0;
+    padding: 0;
+}
+
+.header-sub-wrap {
+    display: none;
+}
+
+.header-sub-navbar {
+    display: flex;
+}
+
+.header-sub-navbar .col-2:nth-child(1) {
+    border: 0;
+    padding: 40px 0 40px 0px;
+}
+
+.header-sub-navbar .col-2 {
+    border-left: 1px solid #e8e8e8;
+    padding: 40px 0 40px 40px;
+}
+
+.header-sub-navbar .title {
+    color: #000;
+    font-size: 20px;
+    font-weight: 700;
+    margin: 0 0 20px 0;
+}
+
+.header-sub-navbar ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.header-sub-navbar ul li a {
+    color: #000;
+    font-size: 16px;
+    font-weight: 400;
+    transition: .5s all;
+}
+
+.header-sub-navbar ul li a:hover,
+.header-sub-navbar ul li a:focus {
+    font-weight: 600;
+    transition: .5s all;
+}
+
+.header-sub-navbar .col-group {
+    margin: 0 0 10px 0;
+}
+
+.header-sub-navbar .dropdown-button {
+    align-items: center;
+    background: none;
+    border: 0;
+    color: #000;
+    display: flex;
+    font-size: 16px;
+    font-weight: 400;
+    gap: 8px;
+    padding: 0;
+}
+
+.header-sub-navbar .dropdown-button::after {
+    background: url(../img/ico/i-minus.png);
+    background-size: cover;
+    content: '';
+    display: inline-block;
+    height: 20px;
+    transition: .5s all;
+    width: 20px;
+}
+
+.header-sub-navbar .dropdown-button.active::after {
+    background: url(../img/ico/i-plus.png);
+    background-size: cover;
+    transition: .5s all;
+}
+
+.header-sub-navbar .dropdown-list {
+    gap: 4px;
+    padding: 8px 0 8px 20px;
+}
+
+.header-sub-navbar .dropdown-list li {
+    color: #444;
+    font-size: 14px;
+    font-weight: 400;
+    list-style: disc;
+}
+
+.header-sub-navbar .dropdown-list li a {
+    color: #444;
+    font-size: 14px;
+    font-weight: 400;
+}
