--- a/resources/assets/css/styles_sub.css
+++ b/resources/assets/css/styles_sub.css
@@ -52,10 +52,10 @@
 /* **************************************** *
  * flex
  * **************************************** */
- .d_flex{
+ .d-flex{
     display: flex;
  }
- .y_flex{
+ .y-flex{
     display: flex;
     flex-direction: column;
  }
@@ -104,23 +104,23 @@ header .top{
     line-height: 18px;
     font-weight: 500;
 }
-header .top .user_wrap{
+header .top .user-wrap{
     display: flex;
     align-items: center;
     gap: 20px;
 }
-header .top .user_wrap .user_info, header .top .user_wrap .timer{
+header .top .user-wrap .user-info, header .top .user-wrap .timer{
     display: flex;
     align-items: center;
 }
-header .top .user_wrap .user_info{
+header .top .user-wrap .user-info{
     margin-right: 2px;
 }
-header .top .user_wrap .timer{
+header .top .user-wrap .timer{
     margin-left: 2px;
     position: relative;
 }
-header .top .user_wrap .timer::after{
+header .top .user-wrap .timer::after{
     content: '';
     position: absolute;
     top: 50%;
@@ -133,11 +133,11 @@ header .top .user_wrap .timer::after{
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
 }
-header .top .user_wrap .input_val{
+header .top .user-wrap .input-val{
     color: #444444;
     font-weight: 600;
 }
-header .top .user_wrap .under_line{
+header .top .user-wrap .under-line{
     text-decoration: underline;
     margin-right: 2px;
 }
@@ -153,7 +153,7 @@ header .bottom{
     display: flex;
     align-items: center;
 }
-header .bottom .nav_wrap{
+header .bottom .nav-wrap{
     display: flex;
     align-items: center;
     gap: 56px;
@@ -161,16 +161,16 @@ header .bottom .nav_wrap{
     font-size: 20px;
     font-weight: 500;
 }
-header .bottom .nav_wrap li{
+header .bottom .nav-wrap li{
     padding: 36px 0;
 }
-header .bottom .nav_wrap li.active{
+header .bottom .nav-wrap li.active{
     color: #004F9D;
     font-weight: 700;
     line-height: 28px;
     position: relative;
 }
-header .bottom .nav_wrap li.active::after{
+header .bottom .nav-wrap li.active::after{
     position: absolute;
     content: '';
     bottom: 0;
@@ -182,22 +182,22 @@ header .bottom .nav_wrap li.active::after{
 /* **************************************** *
  * Content
  * **************************************** */
- .content .search_wrapper{
+ .content .search-wrapper{
     background-color: #F4F5F7;
     padding: 80px 0;
  }
- .content .search_wrapper .search_wrap{
+ .content .search-wrapper .search-wrap{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
- .content .search_wrapper .search_wrap .legend{
+ .content .search-wrapper .search-wrap .legend{
     color: #000000;
     font-size: 32px;
     font-weight: 700;
     line-height: 40px;
 }
-.content .search_wrapper .search_wrap .bread_crumb{
+.content .search-wrapper .search-wrap .bread-crumb{
     display: flex;
     align-items: center;
     gap: 6px;
@@ -205,20 +205,20 @@ header .bottom .nav_wrap li.active::after{
     font-size: 13px;
     line-height: 18px;
 }
-.content .search_wrapper .search_wrap .bread_crumb li:last-child{
+.content .search-wrapper .search-wrap .bread-crumb li:last-child{
     color: #000000;
 }
-.content .search_wrapper form{
+.content .search-wrapper form{
     margin-top: 40px;
     padding: 48px 64px;
     display: flex;
     flex-direction: column;
     gap: 32px;
 }
-.content .search_wrapper form hr{
+.content .search-wrapper form hr{
     border-color: #E8E8E8;
 }
-.content .search_wrapper form.bg_white{
+.content .search-wrapper form.bg-white{
     background-color: #ffffff;
     border-radius: 16px;
     -webkit-border-radius: 16px;
@@ -226,7 +226,50 @@ header .bottom .nav_wrap li.active::after{
     -ms-border-radius: 16px;
     -o-border-radius: 16px;
 }
-.content .search_wrapper form .btn_wrap{
+.content .search-wrapper form .options{
+    display: flex;
+    gap: 80px;
+}
+.content .search-wrapper form .options .input-warpper{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex: 1;
+}
+.content .search-wrapper form .options .input-warpper .input-warp{
+    display: flex;
+    gap: 40px;
+}
+.content .search-wrapper form .options .input-warpper .input-warp label{
+    width: 104px;
+    height: 46px;
+    font-size: 15px;
+    line-height: 46px;
+    color: #000000;
+    font-weight: 500;
+}
+.content .search-wrapper form .options .input-warpper .input-warp input{
+    padding: 12px 16px;
+    width: 100%;
+    height: 46px;
+    font-size: 15px;
+    line-height: 22px;
+    /* color: #AAAAAA; */
+    font-weight: 400;
+    border-radius: 4px;
+    border: 1px solid #DDDDDD;
+    background: #FFFFFF;
+}
+.content .search-wrapper form .options .input-warpper .input-warp input::placeholder{
+    color: #AAAAAA;
+}
+.content .search-wrapper form .options .input-warpper .input-warp .check-box,
+.content .search-wrapper form .options .input-warpper .input-warp .radio-box{
+    display: flex;
+    gap: 6px;
+    align-items: center;
+}
+.content .search-wrapper form .btn-wrap{
     display: flex;
     justify-content: center;
     gap: 8px;
