--- a/resources/assets/css/styles_sub.css
+++ b/resources/assets/css/styles_sub.css
@@ -81,104 +81,6 @@
     justify-content: flex-end;
 }
 
-
-  /* **************************************** *
- * body
- * **************************************** */
- .container{
-    width: 1440px;
-    margin: 0 auto;
- }
-
-/* **************************************** *
- * Header
- * **************************************** */
-header{
-    background-color: #ffffff;
-}
-header .top{
-    padding: 12px 0;
-    border-bottom: 1px solid #E8E8E8;
-    color: #999999;
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 500;
-}
-header .top .user-wrap{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-header .top .user-wrap .user-info, header .top .user-wrap .timer{
-    display: flex;
-    align-items: center;
-}
-header .top .user-wrap .user-info{
-    margin-right: 2px;
-}
-header .top .user-wrap .timer{
-    margin-left: 2px;
-    position: relative;
-}
-header .top .user-wrap .timer::after{
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: -12px;
-    transform: translateY(-50%);
-    border-left: 1px solid #aaaaaa ;
-    height: 12px;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-}
-header .top .user-wrap .input-val{
-    color: #444444;
-    font-weight: 600;
-}
-header .top .user-wrap .under-line{
-    text-decoration: underline;
-    margin-right: 2px;
-}
-header .top .btn{
-    padding: 2px 8px;
-    border-bottom: 1px solid #E8E8E8;
-    font-size: 13px;
-    font-weight: 500;
-    line-height: 18px;
-}
-header .bottom{
-    border-bottom: 1px solid #E8E8E8;
-    display: flex;
-    align-items: center;
-}
-header .bottom .nav-wrap{
-    display: flex;
-    align-items: center;
-    gap: 56px;
-    color: #000000;
-    font-size: 20px;
-    font-weight: 500;
-}
-header .bottom .nav-wrap li{
-    padding: 36px 0;
-}
-header .bottom .nav-wrap li.active{
-    color: #004F9D;
-    font-weight: 700;
-    line-height: 28px;
-    position: relative;
-}
-header .bottom .nav-wrap li.active::after{
-    position: absolute;
-    content: '';
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    border-bottom: 2px solid #004F9D;
-}
-
 /* **************************************** *
  * Content
  * **************************************** */
@@ -216,7 +118,8 @@ header .bottom .nav-wrap li.active::after{
     gap: 32px;
 }
 .content .search-wrapper form hr{
-    border-color: #E8E8E8;
+    width: 100%;;
+    border: 1px solid #EBEBEB;
 }
 .content .search-wrapper form.bg-white{
     background-color: #ffffff;
@@ -226,21 +129,21 @@ header .bottom .nav-wrap li.active::after{
     -ms-border-radius: 16px;
     -o-border-radius: 16px;
 }
-.content .search-wrapper form .options{
+.content .search-wrapper form .options-wrapper{
     display: flex;
     gap: 80px;
 }
-.content .search-wrapper form .options .input-warpper{
+.content .search-wrapper form .options-wrapper .options-wrap{
     display: flex;
     flex-direction: column;
     gap: 20px;
     flex: 1;
 }
-.content .search-wrapper form .options .input-warpper .input-warp{
+.content .search-wrapper form .options-wrapper .options-wrap .input-wrapper{
     display: flex;
     gap: 40px;
 }
-.content .search-wrapper form .options .input-warpper .input-warp label{
+.content .search-wrapper form .options-wrapper .options-wrap .input-wrapper label{
     width: 104px;
     height: 46px;
     font-size: 15px;
@@ -248,28 +151,67 @@ header .bottom .nav-wrap li.active::after{
     color: #000000;
     font-weight: 500;
 }
-.content .search-wrapper form .options .input-warpper .input-warp input{
+/* input text */
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap{
+    flex: 1;
+}
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap input[type=text],
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap input[type=date]{
     padding: 12px 16px;
     width: 100%;
     height: 46px;
     font-size: 15px;
     line-height: 22px;
-    /* color: #AAAAAA; */
     font-weight: 400;
     border-radius: 4px;
     border: 1px solid #DDDDDD;
     background: #FFFFFF;
 }
-.content .search-wrapper form .options .input-warpper .input-warp input::placeholder{
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap input::placeholder{
     color: #AAAAAA;
 }
-.content .search-wrapper form .options .input-warpper .input-warp .check-box,
-.content .search-wrapper form .options .input-warpper .input-warp .radio-box{
+/* date picker */
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap.date-pic{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+/* select */
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap select{
+    padding: 12px 16px;
+    width: 100%;
+    height: 46px;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+}
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap select:focus{
+    border: 1px solid #004F9D;
+}
+/* input checkbox & radio */
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap.check-radio-wrapper{
+    display: flex;
+    gap: 40px;
+}
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap.check-radio-wrapper .check-radio-wrap{
     display: flex;
     gap: 6px;
     align-items: center;
 }
-.content .search-wrapper form .btn-wrap{
+.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap.check-radio-wrapper .check-radio-wrap input{
+    display: flex;
+    gap: 6px;
+    align-items: center;
+    margin: 0;
+}
+/* 
+.content .search-wrapper form .options-wrapper .options-wrap .input-wrapper .input-warp .check-box,
+.content .search-wrapper form .options-wrapper .options-wrap .input-wrapper .input-warp .radio-box{
+    display: flex;
+    gap: 6px;
+    align-items: center;
+}
+ */
+ .content .search-wrapper form .btn-wrap{
     display: flex;
     justify-content: center;
     gap: 8px;
