--- a/resources/assets/css/common.css
+++ b/resources/assets/css/common.css
@@ -309,6 +309,24 @@ button:focus {
     background: #BFD3E6;
 }
 
+.btn-more {
+    align-items: center;
+    color: #666;
+    font-size: 14px;
+    font-weight: 500;
+    display: flex;
+    gap: 2px;
+}
+
+.btn-more::after {
+    background: url(../img/ico/i-arrow-right-g.png);
+    background-size: cover;
+    content: '';
+    display: inline-block;
+    height: 13px;
+    width: 13px;
+}
+
 /* **************************************** *
  * MODAL
  * **************************************** */
@@ -526,6 +544,12 @@ h3.title {
     border: 1px solid #eeeeee;
 }
 
+.card-top {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0 32px 0;
+}
+
 .pt-4 {
     padding-top: 16px;
 }
@@ -534,6 +558,7 @@ h3.title {
 /* **************************************** *
  * input
  * **************************************** */
+/* checkbox */
 .check-wrap {
     align-items: center;
     display: flex;
@@ -606,6 +631,7 @@ h3.title {
     background-size: cover;
 }
 
+/* radio */
 .radio-wrap {
     align-items: center;
     display: flex;
@@ -679,6 +705,7 @@ h3.title {
     background-size: cover;
 }
 
+/* input text */
 .input-wrap {
     display: flex;
     gap: 60px;
@@ -953,6 +980,10 @@ h3.title {
     height: 100px;
 }
 
+.header-logo img {
+    height: 36px;
+}
+
 .header-right {
     align-items: center;
     display: flex;
@@ -966,9 +997,17 @@ h3.title {
 
 .header-navbar ul li a {
     color: #000;
+    display: block;
     font-size: 20px;
     font-weight: 500;
+    padding: 36px 0 32px 0;
     transition: .5s all;
+}
+
+.header-navbar ul li.active a {
+    border-bottom: 4px solid #004F9D;
+    color: #004F9D;
+    font-weight: 700;
 }
 
 .header-navbar ul li a:hover {
