--- a/resources/assets/css/ico.css
+++ b/resources/assets/css/ico.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 
-.i {
+.i,
+.ico {
+    background-size: cover !important;
     display: inline-block;
 }
 
@@ -30,14 +32,30 @@
 
 .i-trg-down {
     background: url(../img/ico/i-trg-down.png);
-    background-size: cover;
     height: 8px;
     width: 8px;
 }
 
 .i-trg-up {
     background: url(../img/ico/i-trg-up.png);
-    background-size: cover;
     height: 8px;
     width: 8px;
+}
+
+.i-android {
+    background: url(../img/ico/i-android.png);
+    height: 16px;
+    width: 16px;
+}
+
+.i-ios {
+    background: url(../img/ico/i-ios.png);
+    height: 16px;
+    width: 16px;
+}
+
+.i-home {
+    background: url(../img/ico/i-home.png);
+    height: 16px;
+    width: 16px;
 }
