--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
-    padding: 64px 0 0 0;
+    padding: 64px 0 94px 0;
 }
 
 .main-cont>.row {
@@ -132,8 +132,159 @@
 
 .item-area.dark h3 {
     color: #fff;
+    line-height: 1.3;
 }
 
 .item-area.dark dl dt {
     color: rgba(255, 255, 255, 0.65);
+}
+
+.chart-legend {
+    display: flex;
+    gap: 20px;
+}
+
+.chart-legend li {
+    align-items: center;
+    color: #444;
+    font-size: 14px;
+    font-weight: 500;
+    display: flex;
+    gap: 4px;
+}
+
+.chart-legend li span {
+    border-radius: 100px;
+    height: 12px;
+    width: 12px;
+}
+
+.chart-legend li span.blue {
+    background: #004F9D;
+}
+
+.chart-legend li span.orange {
+    background: #F98700;
+}
+
+.main-cont .row-wrap {
+    margin: 0 -10px;
+}
+
+.main-cont .row-wrap .col-6 {
+    padding: 0 10px;
+}
+
+.main-notice ul li {
+    align-items: center;
+    border-bottom: 1px solid #eee;
+    ;
+    color: #000;
+    cursor: pointer;
+    display: flex;
+    font-size: 14px;
+    font-weight: 400;
+    display: flex;
+    padding: 16px 0;
+}
+
+.main-notice ul li:first-child {
+    padding: 0 0 16px 0;
+}
+
+.main-notice ul li::before {
+    background: #444;
+    border-radius: 100px;
+    content: '';
+    display: inline-block;
+    height: 3px;
+    margin: 0 6px 0 0;
+    width: 3px;
+}
+
+.main-notice ul li b {
+    color: #999;
+    font-weight: 400;
+    margin: 0 0 0 auto;
+}
+
+.main-notice ul li span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: calc(100% - 100px);
+}
+
+.main-app ul {
+    display: flex;
+}
+
+.main-app ul li:nth-child(1) {
+    border-right: 1px solid #eee;
+    padding-right: 40px;
+}
+
+.main-app ul li:nth-child(2) {
+    padding-left: 40px;
+}
+
+.main-app .app-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.main-app .app-wrap .app-top {
+    align-items: center;
+    display: flex;
+    gap: 8px;
+}
+
+.main-app .app-wrap img {
+    width: 100%;
+}
+
+.main-app .app-wrap .app-top p {
+    align-items: center;
+    display: flex;
+    font-size: 13px;
+    font-weight: 500;
+    gap: 6px;
+    margin: 0 0 0 auto;
+}
+
+.main-app .app-wrap .app-top p span {
+    border-radius: 100px;
+    display: inline-block;
+    height: 6px;
+    width: 6px;
+}
+
+.main-app .app-wrap .app-top p.green {
+    color: #00AA2F;
+}
+
+.main-app .app-wrap .app-top p.green span {
+    background: #00AA2F;
+}
+
+.main-app .app-wrap .app-top p.red {
+    color: #E34140;
+}
+
+.main-app .app-wrap .app-top p.red span {
+    background: #E34140;
+}
+
+/* **************************************** *
+ * GEPS-WEB-STA-US02
+ * **************************************** */
+.sub-cont {
+    padding: 80px 0;
+}
+
+.sub-cont-top h1 {
+    color: #000;
+    font-size: 32px;
+    font-weight: 700;
 }
