--- a/resources/assets/css/styles_sub.css
+++ b/resources/assets/css/styles_sub.css
@@ -17,6 +17,7 @@
     width: 16px;
     height: 16px;
     background-repeat: no-repeat;
+    background-size: cover;
  }
 .ico.logo{
     background-image: url(../img/ico/logo.png);
@@ -82,24 +83,50 @@
 }
 
 /* **************************************** *
+ * Common2
+ * **************************************** */
+hr{
+    width: 100%;;
+    border: 1px solid #EBEBEB;
+}
+.bg-white{
+    background-color: #ffffff;
+}
+.f-primary{
+    color: #004F9D;
+}
+
+/* **************************************** *
  * Content
  * **************************************** */
- .content .search-wrapper{
+.search-wrapper{
     background-color: #F4F5F7;
     padding: 80px 0;
- }
- .content .search-wrapper .search-wrap{
+}
+.search-wrapper form{
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+    margin-top: 40px;
+    padding: 48px 64px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+.search-wrap{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
- .content .search-wrapper .search-wrap .legend{
+.search-wrap .legend{
     color: #000000;
     font-size: 32px;
     font-weight: 700;
     line-height: 40px;
 }
-.content .search-wrapper .search-wrap .bread-crumb{
+.search-wrap .bread-crumb{
     display: flex;
     align-items: center;
     gap: 6px;
@@ -107,43 +134,33 @@
     font-size: 13px;
     line-height: 18px;
 }
-.content .search-wrapper .search-wrap .bread-crumb li:last-child{
+.search-wrap .bread-crumb li:last-child{
     color: #000000;
 }
-.content .search-wrapper form{
-    margin-top: 40px;
-    padding: 48px 64px;
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-}
-.content .search-wrapper form hr{
-    width: 100%;;
-    border: 1px solid #EBEBEB;
-}
-.content .search-wrapper form.bg-white{
-    background-color: #ffffff;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.content .search-wrapper form .options-wrapper{
+
+.options-wrapper{
     display: flex;
     gap: 80px;
 }
-.content .search-wrapper form .options-wrapper .options-wrap{
+.options-wrap{
     display: flex;
     flex-direction: column;
     gap: 20px;
     flex: 1;
 }
-.content .search-wrapper form .options-wrapper .options-wrap .input-wrapper{
-    display: flex;
+.options-wrap .input-group,
+.options-wrap .date-group,
+.options-wrap .radio-wrap,
+.options-wrap .check-wrap,
+.options-wrap .dropdown-group{
+    flex-direction: row !important;
     gap: 40px;
 }
-.content .search-wrapper form .options-wrapper .options-wrap .input-wrapper label{
+.options-wrap .input-group label,
+.options-wrap .date-group h2,
+.options-wrap .radio-wrap h2,
+.options-wrap .check-wrap h2,
+.options-wrap .dropdown-group h2{
     width: 104px;
     height: 46px;
     font-size: 15px;
@@ -151,68 +168,16 @@
     color: #000000;
     font-weight: 500;
 }
-/* input text */
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap{
+.options-wrap .input-group input{
     flex: 1;
 }
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap input[type=text],
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap input[type=date]{
-    padding: 12px 16px;
-    width: 100%;
-    height: 46px;
-    font-size: 15px;
-    line-height: 22px;
-    font-weight: 400;
-    border-radius: 4px;
-    border: 1px solid #DDDDDD;
-    background: #FFFFFF;
-}
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap input::placeholder{
-    color: #AAAAAA;
-}
-/* date picker */
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap.date-pic{
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-/* select */
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap select{
-    padding: 12px 16px;
-    width: 100%;
-    height: 46px;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-}
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap select:focus{
-    border: 1px solid #004F9D;
-}
-/* input checkbox & radio */
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap.check-radio-wrapper{
-    display: flex;
-    gap: 40px;
-}
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap.check-radio-wrapper .check-radio-wrap{
-    display: flex;
-    gap: 6px;
-    align-items: center;
-}
-.content .search-wrapper form  .options-wrapper .options-wrap .input-wrapper .input-wrap.check-radio-wrapper .check-radio-wrap input{
-    display: flex;
-    gap: 6px;
-    align-items: center;
-    margin: 0;
-}
-/* 
-.content .search-wrapper form .options-wrapper .options-wrap .input-wrapper .input-warp .check-box,
-.content .search-wrapper form .options-wrapper .options-wrap .input-wrapper .input-warp .radio-box{
-    display: flex;
-    gap: 6px;
-    align-items: center;
-}
- */
- .content .search-wrapper form .btn-wrap{
+
+/* **************************************** *
+ * Button
+ * **************************************** */
+.btn-wrap{
     display: flex;
     justify-content: center;
     gap: 8px;
 }
+
