--- a/resources/assets/css/ico.css
+++ b/resources/assets/css/ico.css
@@ -59,3 +59,15 @@
     height: 16px;
     width: 16px;
 }
+
+.i-down {
+    background: url(../img/ico/i-down.png);
+    height: 16px;
+    width: 16px;
+}
+
+.i-calendar {
+    background: url(../img/ico/i-calendar.png);
+    height: 18px;
+    width: 18px;
+}
