--- a/resources/assets/css/common.css
+++ b/resources/assets/css/common.css
@@ -114,7 +114,7 @@ textarea {
 
 .common-body aside {
     background: #F4F5F7;
-    height: calc(100vh - 60px);
+    height: auto;
     padding: 20px;
     width: 200px;
 }
