--- a/resources/assets/css/common.css
+++ b/resources/assets/css/common.css
@@ -439,9 +439,13 @@ button:focus {
 /* **************************************** *
  * container
  * **************************************** */
+.wrap {
+    min-width: 1440px;
+}
+
 .container {
     margin: 0 auto;
-    max-width: 1440px;
+    width: 1440px;
 }
 
 .row {
@@ -996,6 +1000,7 @@ h3.title {
     font-weight: 700;
     transition: all .5s;
 }
+
 /* **************************************** *
  * Header
  * **************************************** */
