--- a/resources/assets/css/styles_sub.css
+++ b/resources/assets/css/styles_sub.css
@@ -9,47 +9,34 @@
  * **************************************** */
 
  /* **************************************** *
- * icon & logo
+ * in & logo
  * **************************************** */
-.ico{
-    display: block;
-    text-indent: -9999em;
+.i.i-reset-bk{
+    background-image: url(../img/ico/i-reset-bk.png);
     width: 16px;
     height: 16px;
-    background-repeat: no-repeat;
-    background-size: cover;
- }
-.ico.logo{
-    background-image: url(../img/ico/logo.png);
-    width: 209px !important;
-    height: 36px !important;
- }
-.ico.user{
-    background-image: url(../img/ico/i-user-check.png);
-    margin-right: 4px;
- }
- .ico.clock{
-    background-image: url(../img/ico/i-clock.png);
-    margin-right: 4px;
- }
- .ico.menu{
-    background-image: url(../img/ico/i-menu.png);
-    height: 24px !important;
-    width: 24px !important;
-    padding: 4px 3px;
- }
- .ico.home{
-    background-image: url(../img/ico/i-home.png);
- }
- .ico.arrow{
+}
+.i.i-reset-wh{
+    background-image: url(../img/ico/i-reset-wh.png);
+    width: 16px;
+    height: 16px;
+}
+.i.i-arrow-left{
     background-image: url(../img/ico/i-arrow-left.png);
     width: 10px;
     height: 10px;
- }
- .ico.reset{
-    background-image: url(../img/ico/i-rotate-right.png);
- }
+}
+.i.i-message{
+    background-image: url(../img/ico/i-message.png);
+    width: 16px;
+    height: 16px;
+}
+.i.i-power{
+    background-image: url(../img/ico/i-power.png);
+    width: 16px;
+    height: 16px;
 
+}
 /* **************************************** *
  * flex
  * **************************************** */
@@ -95,7 +82,6 @@ hr{
 .f-primary{
     color: #004F9D;
 }
-
 /* **************************************** *
  * Content
  * **************************************** */
@@ -126,7 +112,7 @@ hr{
     font-weight: 700;
     line-height: 40px;
 }
-.search-wrap .bread-crumb{
+.bread-crumb{
     display: flex;
     align-items: center;
     gap: 6px;
@@ -134,7 +120,7 @@ hr{
     font-size: 13px;
     line-height: 18px;
 }
-.search-wrap .bread-crumb li:last-child{
+.bread-crumb li:last-child{
     color: #000000;
 }
 
@@ -180,4 +166,32 @@ hr{
     justify-content: center;
     gap: 8px;
 }
+/* **************************************** *
+ * Table
+ * **************************************** */
+.table-top2{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0 16px 0;
+}
+.count-wrap{
+    display: flex;
+    gap: 6px;
+}
+.count-wrap .count{
+    display: flex;
+}
 
+.table-chk{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none !important;
+    border-bottom: 1px solid #dddddd !important;
+    padding: 0 8px;
+}
+.table-chk .check-group label{
+    text-indent: -999999em;
+    margin-left: 6px;
+}
