--- a/resources/assets/css/common.css
+++ b/resources/assets/css/common.css
@@ -1255,12 +1255,23 @@ h3.title {
     top: 0;
 }
 
+.basic-table.type2 thead tr th {
+    border: 0;
+    border-bottom: 1px solid #ddd;;
+}
+
 .basic-table tbody tr td {
     border: 1px solid #ddd;
     color: #000;
     font-size: 15px;
     font-weight: 400;
     height: 56px;
+}
+
+.basic-table.type2 tbody tr td {
+    border: 0;
+    border-bottom: 1px solid #ddd;
+    text-align: -webkit-center;
 }
 
 .basic-table thead tr th:last-child,
@@ -1271,6 +1282,21 @@ h3.title {
 .basic-table thead tr th:first-child,
 .basic-table tbody tr td:first-child {
     border-left: 0;
+}
+
+.basic-table tbody tr.selected {
+    background: #EFF6FF;
+}
+
+.text-ellipsis {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.w-64 { 
+    width: 64px;
 }
 
 .scroll-y {
@@ -1293,4 +1319,26 @@ h3.title {
 
 .h-284 {
     max-height: 284px;
+}
+
+.circle-group {
+    display: flex;
+    justify-content: center;
+    gap: 4px;
+}
+
+.circle-group li span {
+    background: #ddd;
+    border-radius: 100px;
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+}
+
+.circle-group li span.blue {
+    background: #004F9D;
+}
+
+.circle-group li span.red {
+    background: #E34140;
 }
