--- a/resources/assets/css/styles_sub.css
+++ b/resources/assets/css/styles_sub.css
@@ -130,7 +130,7 @@ hr{
 .search-wrap{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 }
 .search-wrap .legend{
     color: #000000;
