--- a/resources/assets/css/ico.css
+++ b/resources/assets/css/ico.css
@@ -95,3 +95,21 @@
     height: 16px;
     width: 16px;
 }
+
+.i-plus-b {
+    background: url(../img/ico/i-plus-b.png);
+    height: 16px;
+    width: 16px;
+}
+
+.i-del {
+    background: url(../img/ico/i-del.png);
+    height: 20px;
+    width: 20px;
+}
+
+.i-edit {
+    background: url(../img/ico/i-edit.png);
+    height: 20px;
+    width: 20px;
+}
