--- a/resources/assets/css/common.css
+++ b/resources/assets/css/common.css
@@ -1149,6 +1149,11 @@ h3.title {
     height: 100px;
 }
 
+.header-logo {
+    align-items: center;
+    display: flex;
+}
+
 .header-logo img {
     height: 36px;
 }
@@ -1308,7 +1313,7 @@ h3.title {
 
 .basic-table thead tr th {
     background: #1C2C49;
-    border: 1px solid #ddd;
+    border: 1px solid #3E4B64;
     color: #fff;
     font-size: 15px;
     font-weight: 700;
